fix: permitir orígenes dinámicos (devtunnels, red local) en CORS del gateway